multi-container_K8s_project/k8s_w_cmnts/ingress-service.yaml
apiVersion: networking.k8s.io/v1
# UPDATE API
kind: Ingress
metadata:
  name: ingress-service 
  annotations: # additional higher level configuration
    kubernetes.io/ingress.class: 'nginx' # create Ingress controller based on Nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
    # ADD ANNOTATION
    nginx.ingress.kubernetes.io/rewrite-target: /$1 # configure that the output route will be just a / (/api will replaced by / for example)
    # UPDATE ANNOTATION
spec:
  rules:
    - http:
        paths:
          - path: /?(.*) # route / to client-cluster-ip-service(ClusterIP)
            # UPDATE PATH
            pathType: Prefix
            # ADD PATHTYPE
            backend:
              service:
                # UPDATE SERVICE FIELDS
                name: client-cluster-ip-service
                port:
                  number: 3000
          - path: /api/?(.*) # route /api to server-cluster-ip-service(ClusterIP)
            # UPDATE PATH
            pathType: Prefix
            # ADD PATHTYPE
            backend:
              service:
                # UPDATE SERVICE FIELDS
                name: server-cluster-ip-service
                port:
                  number: 5000
